// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip (unit tests) when has a position should match the snapshot 1`] = `
<kv-tooltip custom-class="" delay="1000" position="left" text="Tooltip">
  <template shadowrootmode="open">
    <div id="content" part="content">
      <slot></slot>
    </div>
  </template>
</kv-tooltip>
`;

exports[`Tooltip (unit tests) when uses default props should match the snapshot 1`] = `
<kv-tooltip custom-class="" delay="1000" text="Tooltip">
  <template shadowrootmode="open">
    <div id="content" part="content">
      <slot></slot>
    </div>
  </template>
</kv-tooltip>
`;
